# echover

./: .gitignore  Cargo.toml  README.md
shaders/: ui.frag  ui.frag.spv  ui.vert  ui.vert.spv
src/: app.rs  main.rs
src/domain/: audiobook.rs  audiobook_file.rs  bookmark.rs  library_folder.rs  mod.rs  playback_state.rs
src/persistence/: db.rs
src/playback/: engine.rs  mod.rs  rodio_engine.rs
src/ui/: action.rs  data.rs  font.rs  geometry.rs  hit.rs  icons.rs  mod.rs  primitives.rs  shell.rs  state.rs  text.rs  theme.rs
src/ui/pages/: book_detail.rs  bookmarks.rs  home.rs  library.rs  mod.rs  player.rs  settings.rs
src/ui/widgets/: book_card.rs  filter_chip.rs  mod.rs  player_controls.rs  search_bar.rs
src/window/: event_loop.rs  mod.rs  renderer.rs
