[package]
name = "echover"
version = "0.1.0"
edition = "2021"

[dependencies]
femtovg = "0.9"
glow = "0.16"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"
rodio = "0.22"
rusqlite = { version = "0.32", features = ["bundled"] }
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.5"
winit = "0.30"
